--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer components {
+    .btn {
+        @apply w-10 h-10 rounded-lg hover:bg-darkBlue hover:translate-y-[-3px] transition duration-200 ; 
+    }
+}
 @layer utilities {
     .scrollbar::-webkit-scrollbar {
         width: 6px;
@@ -10,13 +14,13 @@
 
     .scrollbar::-webkit-scrollbar-track {
         border-radius: 10px;
-        background-color: white;
+        background-color: rgba(0, 0, 0, 0);
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
     }
 
     .scrollbar::-webkit-scrollbar-thumb {
         border-radius: 15px;
-        background-color: #67aeec;
+        background-color: rgb(191, 191, 191);
     }
 
     .scrollbar::-webkit-scrollbar-thumb:hover {
@@ -24,5 +28,40 @@
     }
     .scrollbar::-webkit-scrollbar-button:end:increment {
         height: 0.625rem;
+    }
+    .scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+}
+@layer utilities {
+    .shadow {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+}
+@layer utilities {
+    .speech-bubble {
+        position: relative;
+        width: 200px;
+        height: 80px;
+        background-color: #fff;
+        border-radius: 10px;
+        border: 2px solid #999;
+        margin: 50px;
+    }
+
+    .speech-bubble-triangle {
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 20px 20px 0;
+        border-color: #999 transparent transparent;
+    }
+
+    .speech-bubble-content {
+        padding: 1rem;
     }
 }
