--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
     .input {
         @apply border-2 border-darkGray rounded-md px-1;
     }
+    .overlay {
+        @apply flex flex-col rounded-md gap-4 items-start bg-white p-4 w-80;
+    }
 }
 @layer utilities {
     .scrollbar::-webkit-scrollbar {
